k8s-setup/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gym-jinni
  labels:
    name: gym-jinni
    environment: test
