k8s-setup/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-jinni-ingress
  namespace: gym-jinni
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  rules:
  - host: gym-jinni.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 8081
      - path: /rbac
        pathType: Prefix
        backend:
          service:
            name: main-service
            port:
              number: 8081
